[project]
name = "frappe"
authors = [
    { name = "Frappe Technologies Pvt Ltd", email = "developers@frappe.io"}
]
description = "Metadata driven, full-stack low code web framework"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # Core dependencies - Essential for basic functionality
    "Babel~=2.9.0",
    "Click~=7.1.2",
    "GitPython~=3.1.34",  # Updated for security
    "Jinja2~=3.1.2",
    "Pillow~=9.1.1",  # Keeping older version for stability
    "PyJWT~=2.4.0",
    "PyMySQL==1.1.1",  # Strict version for stability
    "PyPDF2~=2.1.0",
    "PyPika~=0.48.9",
    "PyQRCode~=1.2.1",
    "PyYAML~=6.0.1",  # Updated to resolve build issues
    "RestrictedPython~=6.0",  # Updated to more stable version
    "WeasyPrint==52.5",
    "Werkzeug~=2.2.2",  # Keeping older version for compatibility
    "Whoosh~=2.7.4",
    
    # HTML and content processing
    "beautifulsoup4~=4.9.3",
    "bleach-allowlist~=1.0.3",
    "bleach~=3.3.0",
    "markdown2~=2.4.0",
    "markdownify~=0.11.2",
    "html5lib~=1.1",
    "premailer~=3.8.0",
    
    # System and utilities
    "cairocffi==1.2.0",
    "chardet~=4.0.0",
    "croniter~=1.3.5",
    "email-reply-parser~=0.5.12",
    "ipython~=8.4.0",
    "maxminddb-geolite2==2018.703",
    "num2words~=0.5.10",
    "pdfkit~=1.0.0",
    "phonenumbers==8.12.40",
    "python-dateutil~=2.8.1",
    "pytz==2022.1",
    "schedule~=1.1.0",
    "sqlparse~=0.4.1",
    "terminaltables~=3.1.0",
    "traceback-with-variables~=2.0.4",
    "xlrd~=2.0.1",
    
    # Security and authentication
    "cryptography~=37.0.2",  # Keeping older version
    "ldap3~=2.9",
    "oauthlib~=3.1.0",
    "passlib~=1.7.4",
    "pyOpenSSL~=20.0.1",  # Keeping older version
    "pyasn1~=0.4.8",
    "pycryptodome~=3.10.1",  # Keeping older version
    "pyotp~=2.6.0",
    "zxcvbn-python~=4.4.24",
    
    # Database and caching
    "psutil~=5.9.1",
    "psycopg2-binary~=2.9.1",
    "redis~=3.5.3",
    "hiredis~=2.0.0",
    
    # Git and version control
    "git-url-parse~=1.2.2",
    "gitdb~=4.0.7",
    "semantic-version~=2.10.0",
    
    # HTTP and networking
    "gunicorn~=20.1.0",
    "requests-oauthlib~=1.3.0",
    "requests~=2.27.1",
    "rq~=1.10.1",  # Using stable version instead of git
    "tenacity~=8.0.1",
    "urllib3~=1.26.4",
    
    # File handling and images
    "openpyxl~=3.0.7",
    "pypng~=0.20220715.0",
    
    # Cloud and external services
    "boto3~=1.18.49",
    "dropbox~=11.7.0",
    "google-api-python-client~=2.2.0",
    "google-auth-httplib2~=0.1.0",
    "google-auth-oauthlib~=0.4.4",
    "google-auth~=1.29.0",
    "rsa>=4.1",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
coverage = "~=6.4.1"
Faker = "~=13.12.1"
pyngrok = "~=5.0.5"
unittest-xml-reporting = "~=3.0.4"
watchdog = "~=2.1.9"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"
